fix banner on mobile

--- a/app/_assets/stylesheets/header.less
+++ b/app/_assets/stylesheets/header.less
@@ -25,7 +25,9 @@ body {
         display: flex;
         top: 0;
         width: 100vw;
-        height: 60px;
+        height: auto;
+        padding-top: 15px;
+        padding-bottom: 15px;
         left: 0;
         z-index: 9;
         top: 0px;
